--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,24 @@ dist.dir=dist
 dist.jar=${dist.dir}/colegio_inmaculada.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\daniel\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\daniel\\Documents\\@PROGRAMACION\\jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Administrador\\Desktop\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Administrador\\Desktop\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\Administrador\\Desktop\\mysql-connector-java-8.0.11.jar
 file.reference.mysql-connector-java-8.0.16.jar=C:\\conector-java-mysql\\mysql-connector-java-8.0.16.jar
+file.reference.RSCalendar.jar=C:\\Users\\daniel\\Desktop\\RSCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.16.jar}
+    ${file.reference.mysql-connector-java-8.0.16.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.RSCalendar.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -42,7 +55,8 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql-connector-java-8.0.11.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -56,7 +70,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=vista.Ingreso
+main.class=vista.PanelPadre
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
